Removing the empty stylesheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <section class="hero">
   <div class="small-container">
-    <h2>Fresh, homemade baked goods</h2>
+    <h2>Cookies:Fresh, homemade baked goods</h2>
     <p class="sub-text">Bakery<strong>Store</strong> serves the freshest baked goods in San Francisco.</p>
   </div>
 </section>
