Creating the component library element page template

--- a/_se-elements/list.html
+++ b/_se-elements/list.html
@@ -1,7 +1,12 @@
 ---
 layout: default
-title: Buttons
+title: List
 usage: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed tristique nulla, vitae ornare quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
+
 ---
 
-<a href="#" class="btn se-btn-primary">Button</a>
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>  
