updates to elements and patterns

--- a/_se-elements/buttons.html
+++ b/_se-elements/buttons.html
@@ -1,7 +1,13 @@
 ---
 layout: default
 title: Buttons
-usage: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed tristique nulla, vitae ornare quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
----
+usage: We have 3 action levels in our buttons, Default, Primary and Link. Default and Primary and will always visually appear as buttons, whilst the Link button is a ‘text link’. For completeness an example of a button used for alerts is also shown. 
+--- 
 
-<a href="#" class="btn se-btn-primary">Button</a>
+<a href="#" class="btn btn-default">Default button</a> 
+
+<a href="#" class="btn btn-primary">Action button</a>  
+
+<a href="#" class="btn btn-link">Link button</a>
+
+<a href="#" class="btn btn-warning">Warning button</a> 
