--- a/_se-elements/fieldsets.html
+++ b/_se-elements/fieldsets.html
@@ -5,7 +5,7 @@ usage: Use fieldsets to group related form controls. The first element inside a 
 
 ---
 <fieldset>
-  <legend>This is a title</legend>
+  <legend>This is a title for the group of controls</legend>
   <input type="checkbox" name="checkbox" value="1">
   <label for="checkbox">I am enabled </label>
 </fieldset>
