--- a/_se-elements/file-upload.html
+++ b/_se-elements/file-upload.html
@@ -27,42 +27,22 @@ usage: A control that lets the user select a file for upload
 	
 	.upload-file-text {
 		position: relative;
+		margin: 0 0 5px 0px;
+		font-weight:300;
+	}
+	
+	.upload-file-caption {
+		position: relative;
 		margin: 0 0 5px 15px;
 	}
 
 </style>
-
-<!--
 <div class="form-group">
-	<label class="form-label" for="file-input">Upload a file</label>
-<div class="fileUpload btn btn-default"> <span> Choose file </span>
-  <input type="file" class="upload">
+  <div class="row">
+    <label for="file-input" class="upload-file-caption">Upload a file</label>
+  </div>
+  <div class="fileUpload btn btn-default"> <span> Choose file </span>
+    <input type="file" class="upload">
+  </div>
+  <label class="upload-file-text">No file chosen</label>
 </div>
-	<label>Upload a file</label>
-</div>
--->
-
-<!--
-<div class="form-group">
-	<label for="form-label" class="form-label">
-		Upload a file
-	</label>
-	<input type="file" id="file-input">
-</div>
--->
-
-
-<div class="form-group">
-	<div class="row">
-		<label class="upload-file-text" for="file-input">Upload a file</label>	
-	</div>
-	
-
-		<div class="fileUpload btn btn-default"> <span> Choose file </span>
-		  <input type="file" class="upload">
-		</div>	
-
-		<label>Upload a file</label>
-
-</div>
-
