--- a/_se-elements/validation.html
+++ b/_se-elements/validation.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Validation
-usage: The. 
+usage: Checking the information entered by a person when sending information.
 ---
 <label for="companyName">Business name</label>
 <div class="help-block" id="companyNameHelp"> Enter the name of your business as registered at Companies House. </div>
