colour palette page built

--- a/_se-elements/radio-buttons.html
+++ b/_se-elements/radio-buttons.html
@@ -10,4 +10,4 @@ usage: Radio buttons let a user select ONE of a limited number of choices
   <input type="radio" name="gender" value="other"> Other
 </form>
 
-<p><b>Note:</b> When a user clicks on a radio-button, it becomes checked, and all other radio-buttons with equal name become unchecked.</p>
+<p><b>Note:</b> When a user clicks on a radio-button, it becomes checked, all other radio-buttons with equal name become unchecked.</p>
