updates to various elements
h tags, lists, page headers

--- a/_se-elements/list.html
+++ b/_se-elements/list.html
@@ -5,8 +5,16 @@ usage: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed tris
 
 ---
 
+
 <ul>
   <li>Coffee</li>
   <li>Tea</li>
   <li>Milk</li>
 </ul>  
+
+
+<ol>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol> 
