added se-page-templates to the structure; reorganising elements, components, patterns (deleting duplications); all submenu items visible in the navbar

--- a/se-page-patterns.html
+++ b/se-page-patterns.html
@@ -2,7 +2,7 @@
 layout: page
 title: SE Design Patterns
 ---
-{% for cookie in site.se-patterns %}
+{% for cookie in site.se-page-patterns %}
 	<div class="cookie">
 		<h2><a href="{{ cookie.url }}">{{ cookie.title }}</a></h2>
 	</div>
