--- a/se-templates.html
+++ b/se-templates.html
@@ -2,7 +2,7 @@
 layout: page
 title: SE Templates
 ---
-{% for cookie in site.se-templates %}
+{% for cookie in site.se-page-templates %}
 	<div class="cookie">
 		<h2><a href="{{ cookie.url }}">{{ cookie.title }}</a></h2>
 	</div>
