implementing ‘copy code snippet’ feature

--- a/_se-elements/buttons.html
+++ b/_se-elements/buttons.html
@@ -4,6 +4,10 @@ title: Buttons
 usage: We have 3 action levels in our buttons, Default, Primary and Link. Default and Primary and will always visually appear as buttons, whilst the Link button is a ‘text link’. For completeness an example of a button used for alerts is also shown. 
 --- 
 
+<div class="form-group">
+    <input type="submit" data-gtm="form-submit" id="form-submit" class="button button--primary dirty" value="Submit">
+</div>
+
 <a href="#" class="button button--primary">Primary button</a> 
 
 <a href="#" class="button button--secondary">Secondary button</a>  
