Component Library Layout Adjustments

--- a/_se-visual-language/colours.html
+++ b/_se-visual-language/colours.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: no-code
 title: SE colour palette
 usage: The Scottish Enterprise online brand palette must be used at all times. When creating a website or application clours must be specified in hexadecimal formet. 
 ---
