--- a/_se-visual-language/typography-colours.html
+++ b/_se-visual-language/typography-colours.html
@@ -1,7 +1,7 @@
 ---
-layout: default
+layout: no-code
 title: SE typography colours
-usage: The Scottish Enterprise online brand palette must be used at all times. When creating a website or application clours must be specified in hexadecimal formet. 
+usage: The Scottish Enterprise online brand palette must be used at all times. When creating a website or application colours must be specified in hexadecimal format. 
 ---
 <div class="clearfix">
   <div class="color-block">
