--- a/_se-typography/h1-h6.html
+++ b/_se-typography/h1-h6.html
@@ -4,15 +4,15 @@ title: H1 - H6
 usage: ...
 --- 
 
-<h1 class="">A 48px Bold heading</h1>
+<h1>A 48px Bold heading</h1>
 
-<h2 class="">A 36px Bold heading</h2>
+<h2>A 36px Bold heading</h2>
 
-<h3 class="">A 24px Bold heading</h3>
+<h3>A 24px Bold heading</h3>
 
-<h4 class="">A 19px Bold heading</h4>
+<h4>A 19px Bold heading</h4>
 
-<h5 class="">A 19px Bold heading</h5>
+<h5>A 19px Bold heading</h5>
 
-<h6 class="">A 19px Bold heading</h6>
+<h6>A 19px Bold heading</h6>
 
