--- a/_se-components/application-progress-indicator.html
+++ b/_se-components/application-progress-indicator.html
@@ -1,14 +1,14 @@
 ---
 layout: code-examples
 title: Application progress indicator
-usage: ..
+usage: Progress indicator used on long multi-page forms to indicate where you are, what is completed and how much is still left to complete.
 ---
 
 <ol id="progress--indicator">
-    <li class="current--step"><span class="light"></span>Business details</li>
-    <li><span class="light"></span>Project details</li>
-    <li><span class="light"></span>Project outputs</li>
-    <li><span class="light"></span>Project resources</li>
+    <li class="complete"><span class="light"></span>Business details</li>
+    <li class="complete"><span class="light"></span>Project details</li>
+    <li class="incomplete"><span class="light"></span>Project outputs</li>
+    <li class="current--step"><span class="light"></span>Project resources</li>
     <li><span class="light"></span>Project costs</li>
     <li><span class="light"></span>Preview</li>
 </ol>
