Sorting out pages and typography

--- a/_se-typography/body-copy.html
+++ b/_se-typography/body-copy.html
@@ -1,11 +1,12 @@
 ---
 layout: code-examples
-title: Typography
+title: Body copy
 usage: ...
 --- 
 
 
 <p class="leader">Oversized text for leader paragraphs or sections</p>
+
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada tristique odio in ultrices. Mauris rutrum enim vitae gravida bibendum. </p>
 
 <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> <p>Nulla malesuada tristique odio in ultrices. Mauris rutrum enim vitae gravida bibendum.</p></blockquote>
@@ -15,6 +16,5 @@ usage: ...
 <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada tristique odio in ultrices. Mauris rutrum enim vitae gravida bibendum. </small>
 
 
-<article>
+
 <a href="#">Link</a>
-</article>
