--- a/_se-typography/list.html
+++ b/_se-typography/list.html
@@ -1,6 +1,6 @@
 ---
 layout: code-examples
-title: List
+title: Unordered list
 usage: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed tristique nulla, vitae ornare quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
 
 ---
@@ -11,10 +11,3 @@ usage: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed tris
   <li>Tea</li>
   <li>Milk</li>
 </ul>  
-
-
-<ol>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ol> 
