--- a/_se-typography/info-notes.html
+++ b/_se-typography/info-notes.html
@@ -5,6 +5,6 @@ usage: ...
 --- 
 
 
-<div class="info-note">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem nisl, cursus quis risus a, vehicula tempus ligula. Donec ullamcorper justo ut quam elementum consequat et eget mauris.</div>
+<div class="info-note note">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem nisl, cursus quis risus a, vehicula tempus ligula. Donec ullamcorper justo ut quam elementum consequat et eget mauris.</div>
 
 <div class="info-note caution">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem nisl, cursus quis risus a, vehicula tempus ligula. Donec ullamcorper justo ut quam elementum consequat et eget mauris.</div>
