--- a/_se-form-elements/checkboxes.html
+++ b/_se-form-elements/checkboxes.html
@@ -4,16 +4,26 @@ title: Checkboxes
 usage: Checkboxes let a user select ZERO or MORE options of a limited number of choices. 
 --- 
 
-<div class="field field--spaced">
-    <form>
-      <label>
-        <input type="checkbox" name="checkbox" value="1">
-        I am enabled
-      </label>
-
-      <label>
-        <input type="checkbox" name="checkbox" value="2" disabled>
-        I am disabled. 
-      </label>
-    </form>
+<div class="form-group relative">
+    <fieldset>
+        <legend>Choose which Sectors to receive information on.</legend>
+        <div class="input-wrapper">
+            <div>
+                <input name="sector" id="sector-adm" class="fancy-checkbox" type="checkbox">
+                <label for="sector-adm" class="inline fancy-checkbox">Aerospace defence and marine</label>
+            </div>
+            <div>
+                <input name="sector" id="sector-cs" class="fancy-checkbox" type="checkbox">
+                <label for="sector-cs" class="inline fancy-checkbox">Chemical sciences</label>
+            </div>
+            <div>
+                <input name="sector" id="sector-c" class="fancy-checkbox" type="checkbox">
+                <label for="sector-c" class="inline fancy-checkbox">Construction</label>
+            </div>
+            <div>
+                <input name="sector" id="sector-ci" class="fancy-checkbox" type="checkbox">
+                <label for="sector-ci" class="inline fancy-checkbox">Creative industries</label>
+            </div>
+        </div>
+    </fieldset>
 </div>
