Fix typo in Fieldset and updated file upload

--- a/_se-form-elements/fieldsets.html
+++ b/_se-form-elements/fieldsets.html
@@ -1,7 +1,7 @@
 ---
 layout: code-examples
-title: Fieldsets
-usage: Use fieldsets to group related form controls. The first element inside a filedset must be a legend element which describes the group 
+title: Fieldset
+usage: Use fieldsets to group related form controls. The first element inside a fieldset must be a legend element which describes the group 
 
 ---
 <fieldset>
