--- a/_se-form-elements/input-validation.html
+++ b/_se-form-elements/input-validation.html
@@ -1,16 +1,17 @@
 ---
 layout: code-examples
 title: Input validation
-usage: Checking the information entered by a person when sending information.
+usage: Checking the data entered or submitted by a person into the form fields.
 ---
 
 <div class="form-group relative">
     <a id="name-link"></a>
-    <label for="name">
-      <span>*</span> Full name
-    </label>
-    <input aria-required="true" required="" id="name" class="grey form-control input--large dirty input-error" type="text">
-    <ul class="current-errors"><li tabindex="-1">Please enter your name</li></ul>
+    <label for="name">Full name</label>
+    <input aria-required="true" required="" id="name" class="grey form-control input--large input-error" type="text">
+    <ul class="current-errors">
+      <li tabindex="-1">Please enter your name</li>
+      <li tabindex="-1">Your name should not contain numbers or special characters</li>
+    </ul>
 </div>
 
 
