Work on Buttons + mixins

--- a/_buttons/main-buttons.html
+++ b/_buttons/main-buttons.html
@@ -1,11 +1,17 @@
 ---
 layout: code-examples
 title: Buttons
-usage: 
---- 
+usage:
+---
 
 <a href="#" class="button button--primary">Primary Button</a>
-
+<br />
+<a href="#" class="button button--primary disabled">Primary Button Disabled</a>
+<br />
 <a href="#" class="button button--secondary">Secondary Button</a>
-
+<br />
+<a href="#" class="button button--secondary disabled">Secondary Button Disabled</a>
+<br />
 <a href="#" class="button button--tertiary">Tertiary Button</a>
+<br />
+<a href="#" class="button button--tertiary disabled">Tertiary Button Disabled</a>
