--- a/pages/typography.html
+++ b/pages/typography.html
@@ -13,7 +13,7 @@ permalink: /typography/
   {% for cookie in site.typography %}
   <div class="link-block col-md-4">
     <h2><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></h2>
-    <p>Headings, body text, links, lists, inset text, hidden text.</p>
+    {{cookie.sub-title}}
   </div>
   {% endfor %}
 </div>
