Updated Typography pages

--- a/_typography/body-copy.html
+++ b/_typography/body-copy.html
@@ -2,7 +2,8 @@
 layout: code-examples
 collection-name: Typography
 title: Body copy
-usage: ...
+sub-title: How to use tags to display text with variations in weight and height.
+usage: How to use tags to display text with variations in weight and height.
 --- 
 
 
