--- a/_typography/info-notes.html
+++ b/_typography/info-notes.html
@@ -2,7 +2,8 @@
 layout: code-examples
 collection-name: Typography
 title: Info notes
-usage: ...
+sub-title: Special sections of text for 'Information' or 'Caution'
+usage: Special sections of text for 'Information' or 'Caution'
 --- 
 
 
