--- a/_typography/inline-split-definition-list.html
+++ b/_typography/inline-split-definition-list.html
@@ -2,6 +2,7 @@
 layout: code-examples
 collection-name: Typography
 title: Inline, split definition list
+sub-title: Settings and tags for 'Descriptive Lists'
 usage: Displays the definition title and the description(s) on the same line floated away from each other. Only use one 'dd' per 'dt'. It does work well with long 'dds' though
 
 
