--- a/_typography/h1-h6.html
+++ b/_typography/h1-h6.html
@@ -2,18 +2,19 @@
 layout: code-examples
 collection-name: Typography
 title: H1 - H6
-usage: ...
+sub-title: H1 to H6 styles showing font height and line-height.
+usage: H1 to H6 styles
 --- 
 
-<h1>A 48px Bold heading</h1>
+<h1>h1 Bold heading 48px/54px</h1>
 
-<h2>A 36px Bold heading</h2>
+<h2>h2 Bold heading 36px/42px</h2>
 
-<h3>A 24px Bold heading</h3>
+<h3>h3 Bold heading 24px/30px</h3>
 
-<h4>A 19px Bold heading</h4>
+<h4>h4 Bold heading 20px/26px</h4>
 
-<h5>A 19px Bold heading</h5>
+<h5>h5 Bold heading 18px/26px</h5>
 
-<h6>A 19px Bold heading</h6>
+<h6>h6 Bold heading 16px/22px</h6>
 
