--- a/_typography/ordered-list.html
+++ b/_typography/ordered-list.html
@@ -2,6 +2,7 @@
 layout: code-examples
 collection-name: Typography
 title: Ordered list
+sub-title: Tags for Ordered lists
 usage: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed tristique nulla, vitae ornare quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
 
 ---
