Updated Links page

--- a/_buttons/links.html
+++ b/_buttons/links.html
@@ -1,15 +1,19 @@
 ---
 layout: code-examples
 title: Links
-usage: 
---- 
+sub-title: Links e.g. External links and general links.
+usage: Note - for an external link, please add &lt;i class="fa fa-external-link"&gt;&lt;/i&gt; at the end of your link - within the &lt;a&gt;&lt;/a&gt; tags.
+---
 
 <article>
 
-<a href="" class="">This is a link</a>
+    <p>
+        This is text and .. <a href="#" class="">This is a link</a>
+    </p>
 
-<br /><br />
-
-<a href="https://" class="">This is an external link</a>
+    <br/><br/>
+    <p>
+        This is text and .. <a href="https://" class="">This is an external link <i class="fa fa-external-link"></i></a>
+    </p>
 
 </article>
