--- a/_buttons/main-buttons.html
+++ b/_buttons/main-buttons.html
@@ -1,6 +1,7 @@
 ---
 layout: code-examples
 title: Buttons
+sub-title: Primary, Secondary and Tertiary buttons with normal, hover and disabled states.
 usage:
 ---
 
