Updated files for layout guide

--- a/_typography/fonts.html
+++ b/_typography/fonts.html
@@ -2,12 +2,12 @@
 layout: code-examples
 collection-name: Typography
 title: Font usage
-sub-title: Font usage for standard text and FontAwesome for icons.
+sub-title: Our standard font is Roboto and we use FontAwesome for icons.
 usage: Font usage for standard text and FontAwesome for icons.
 --- 
 
 
-<p class="leader">Fonts being used 'Roboto' for all body text and 'FontAwesome' for icons.</p>
+<p class="leader">Our standard font is: 'Roboto' for all body text and we are using 'FontAwesome' for icons.</p>
 
 <p>Body font family with fall-backs..</p>
 <p>
@@ -21,7 +21,7 @@ usage: Font usage for standard text and FontAwesome for icons.
 <p>
     <i class="fa fa-mobile fa-2x"></i> <- Mobile phone icon
     <br />
-    <a href="http://fontawesome.io/icons/">Complete icon list here..</a>
+    <a href="http://fontawesome.io/icons/">The complete FontAwesome icon list is here..<i class="fa fa-external-link"></i></a>
 
 </p>
 
