--- a/pages/grid.html
+++ b/pages/grid.html
@@ -1,14 +1,14 @@
 ---
 layout: page
-title: Buttons
-permalink: /buttons/
+title: Grid
+permalink: /grid/
 ---
 
 {% include breadcrumbs.html %}
 <h1>{{ page.title }}</h1>
 
 <div class="row">
-  {% for cookie in site.buttons %}
+  {% for cookie in site.grid %}
   <div class="link-block col-md-4">
     <h2><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></h2>
     {{ cookie.sub-title }}
