Breadcrumbs - updated to use FA icon

--- a/_components/breadcrumbs.html
+++ b/_components/breadcrumbs.html
@@ -6,5 +6,5 @@ usage: Indicate the current page’s location within a navigational hierarchy. S
 <ol class="breadcrumbs">
   <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link"><span class="breadcrumbs__title">Home</span></a></li>
   <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link"><span class="breadcrumbs__title">Grants</span></a></li>
-  <li class="breadcrumbs__item">Start</li>
+  <li class="breadcrumbs__item">The page we're on [no link required]</li>
 </ol>
