--- a/_components/breadcrumbs.html
+++ b/_components/breadcrumbs.html
@@ -1,10 +1,10 @@
 ---
 layout: code-examples
 title: Breadcrumbs
-usage: Indicate the current page’s location within a navigational hierarchy. Separators are automatically added in CSS through ::before and content.
+usage: Indicate the current page’s location within a navigational hierarchy. Separators are automatically added in CSS through the ::after pseudo class.
 ---
 <ol class="breadcrumbs">
-  <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link"><span class="breadcrumbs__title">Home</span></a></li>
-  <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link"><span class="breadcrumbs__title">Grants</span></a></li>
-  <li class="breadcrumbs__item">The page we're on [no link required]</li>
+  <li class="breadcrumb-item"><a href="#">Home</a></li>
+  <li class="breadcrumb-item"><a href="#">Grants</a></li>
+  <li class="breadcrumb-item">The page we're on [no link required]</li>
 </ol>
