--- a/_typography/fonts.html
+++ b/_typography/fonts.html
@@ -7,13 +7,14 @@ usage: Font usage for standard text and FontAwesome for icons.
 --- 
 
 
-<p class="leader">Our standard font is: 'Roboto' for all body text and we are using 'FontAwesome' for icons.</p>
+<p class="leader">This is 'leader' text .. Our standard font is: 'Roboto' for all body text and we are using 'FontAwesome' for icons.</p>
 
 <p>Body font family with fall-backs..</p>
 <p>
     body {
         font-family: Roboto,"Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 16px;
+        line-height: 23px;
         font-weight: normal;
     }
 </p>
@@ -24,6 +25,3 @@ usage: Font usage for standard text and FontAwesome for icons.
     <a href="http://fontawesome.io/icons/">The complete FontAwesome icon list is here..<i class="fa fa-external-link"></i></a>
 
 </p>
-
-
-
