Updated Links + buttons

--- a/_buttons/links.html
+++ b/_buttons/links.html
@@ -1,7 +1,7 @@
 ---
 layout: code-examples
 title: Links
-sub-title: Links e.g. External links and general links.
+sub-title: Links e.g. Text links and External links.
 usage: Note - for an external link, please add &lt;i class="fa fa-external-link"&gt;&lt;/i&gt; at the end of your link - within the &lt;a&gt;&lt;/a&gt; tags.
 ---
 
