--- a/_grid/grid.html
+++ b/_grid/grid.html
@@ -1,52 +1,49 @@
 ---
 layout: code-examples
+collection-name: Grid
 title: Grid
-usage: Basic layout grid
+subtitle: Sub-title
+usage: More information on Bootstrap's Grid system here > <a href="http://v4-alpha.getbootstrap.com/layout/grid/">http://v4-alpha.getbootstrap.com/layout/grid/</a>
 ---
 
 
-<div id="accordion" class="panel-group">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">1. Section title one</a>
-            </h4>
-        </div>
-        <div id="collapseOne" class="panel-collapse collapse">
-            <div class="panel-body">
-                <p>
-                    This is where to place the content to be shown or hidden by the accordion functionality.
-                </p>
-            </div>
-        </div>
+We are using a 12 column responsive grid.
+This gives us the ability to support all screen sizes from widescreen to mobile device.
+We are using 5 breakpoints which allow us to make content display optimally for different viewports.
+
+The breakpoints are:
+
+lg : 1170px
+md : 992px
+sm : 768px
+xs : 480px
+xxs : 320px
+
+
+<div class="container-fluid style-guide-styled">
+    <div class="row">
+        <div class="col col-lg-3 col-md-3 col-sm-6 col-xs-12"><div class="col-inner">col-lg-3 / col-md-3 / col-sm-6 / col-xs-12</div></div>
+        <div class="col col-lg-3 col-md-3 col-sm-6 col-xs-12"><div class="col-inner">col-lg-3 / col-md-3 / col-sm-6 / col-xs-12</div></div>
+        <div class="col col-lg-3 col-md-3 col-sm-6 col-xs-12"><div class="col-inner">col-lg-3 / col-md-3 / col-sm-6 / col-xs-12</div></div>
+        <div class="col col-lg-3 col-md-3 col-sm-6 col-xs-12"><div class="col-inner">col-lg-3 / col-md-3 / col-sm-6 / col-xs-12</div></div>
     </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">2. Section title two</a>
-            </h4>
-        </div>
-        <div id="collapseTwo" class="panel-collapse collapse in">
-            <div class="panel-body">
-                <p>
-                    This is where to place the content to be shown or hidden by the accordion functionality.
-                </p>
-            </div>
-        </div>
+    <div class="row">
+        <div class="col col-lg-4 col-md-4 col-sm-4 col-xs-12"><div class="col-inner">col-lg-4 / col-md-4 / col-sm-4 / col-xs-12</div></div>
+        <div class="col col-lg-4 col-md-4 col-sm-4 col-xs-12"><div class="col-inner">col-lg-4 / col-md-4 / col-sm-4 / col-xs-12</div></div>
+        <div class="col col-lg-4 col-md-4 col-sm-4 col-xs-12"><div class="col-inner">col-lg-4 / col-md-4 / col-sm-4 / col-xs-12</div></div>
     </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">3. Section title three</a>
-            </h4>
-        </div>
-        <div id="collapseThree" class="panel-collapse collapse">
-            <div class="panel-body">
-                <p>
-                    This is where to place the content to be shown or hidden by the accordion functionality.
-                </p>
-            </div>
-        </div>
+    <div class="row">
+        <div class="col col-lg-6 col-md-6 col-sm-6 col-xs-12"><div class="col-inner">col-lg-6 / col-md-6 / col-sm-6 / col-xs-12</div></div>
+        <div class="col col-lg-6 col-md-6 col-sm-6 col-xs-12"><div class="col-inner">col-lg-6 / col-md-6 / col-sm-6 / col-xs-12</div></div>
+    </div>
+    <div class="row">
+        <div class="col col-lg-8 col-md-8 col-sm-8 col-xs-12"><div class="col-inner">col-lg-8 / col-md-8 / col-sm-8 / col-xs-12</div></div>
+        <div class="col col-lg-4 col-md-4 col-sm-4 col-xs-12"><div class="col-inner">col-lg-4 / col-md-4 / col-sm-4 / col-xs-12</div></div>
+    </div>
+    <div class="row">
+        <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12"><div class="col-inner">col-lg-12 / col-md-12 / col-sm-12 / col-xs-12</div></div>
     </div>
 </div>
+
+
 
