--- a/pages/grid.html
+++ b/pages/grid.html
@@ -7,11 +7,12 @@ permalink: /grid/
 {% include breadcrumbs.html %}
 <h1>{{ page.title }}</h1>
 
+
 <div class="row">
   {% for cookie in site.grid %}
   <div class="link-block col-md-4">
     <h2><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></h2>
-    {{ cookie.sub-title }}
+    <!--{{ cookie.sub-title }}-->
   </div>
   {% endfor %}
 </div>
