a11y fixes to file upload

--- a/_form-elements/file-upload.html
+++ b/_form-elements/file-upload.html
@@ -2,16 +2,14 @@
 layout: code-examples
 collection-name: Form Elements 
 title: File upload
-usage: A control that lets the user select a file for upload 
-
+usage: A control that lets the user select a file for upload (we could use https://codepen.io/accessabilly/pen/qNpZJg)
 ---
 
 <div class="form-group">
-  <div class="row">
-    <label for="file-input" class="upload-file-caption">Upload a file</label>
-  </div>
-  <div class="fileUpload btn btn-default"> <span> Choose file </span>
-    <input type="file" class="upload">
-  </div>
-  <label class="upload-file-text">No file chosen</label>
+ <form action="upload">
+   <div class="fileUpload btn btn-default"> <span> Choose file </span>
+    <label for="file-upload" class="sr-only">file upload</label>
+    <input id="file-upload" type="file" class="upload">
+  </div>    
+ </form>
 </div>
