--- a/se-buttons/buttons.html
+++ b/se-buttons/buttons.html
@@ -1,45 +1,45 @@
 ---
 layout: code-examples
 title: Buttons
-usage: We have 3 action levels in our buttons, Default, Primary and Link. Default and Primary and will always visually appear as buttons, whilst the Link button is a ‘text link’. For completeness an example of a button used for alerts is also shown. 
---- 
+usage: We have 3 action levels in our buttons, Default, Primary and Link. Default and Primary and will always visually appear as buttons, whilst the Link button is a ‘text link’. For completeness an example of a button used for alerts is also shown.
+---
 
 <div class="form-group">
-    <input type="submit" data-gtm="form-submit" id="form-submit" class="button button--primary dirty" value="Submit">
+    <input type="submit" data-gtm="form-submit" id="form-submit" class="button button-primary dirty" value="Submit">
 </div>
 
-<a href="#" class="button button--primary">Primary button</a> 
+<a href="#" class="button button-primary">Primary button</a>
 
-<a href="#" class="button button--secondary">Secondary button</a>  
+<a href="#" class="button button-secondary">Secondary button</a>
 
-<a href="#" class="button button--dark">Dark button</a>
+<a href="#" class="button button-dark">Dark button</a>
 
-<a href="#" class="button button--clear">Clear button</a> 
+<a href="#" class="button button-clear">Clear button</a>
 
-<a href="#" class="button button--success">Success button</a> 
+<a href="#" class="button button-success">Success button</a>
 
-<a href="#" class="button button--error">Error button</a> 
+<a href="#" class="button button-error">Error button</a>
 
-<a href="#" class="button button--invert">Invert button</a> 
+<a href="#" class="button button-invert">Invert button</a>
 
-<a href="#" class="button button--cancel">Cancel button</a> 
+<a href="#" class="button button-cancel">Cancel button</a>
 
-<a href="#" class="button button--ghost">Ghost button</a> 
+<a href="#" class="button button-ghost">Ghost button</a>
 
-<a href="#" class="button button--external">External button</a> 
+<a href="#" class="button button-external">External button</a>
 
-<a href="#" class="button button--ghost-invert">Ghost invert button</a> 
+<a href="#" class="button button-ghost-invert">Ghost invert button</a>
 
-<a href="#" class="button button--large">Large button</a> 
+<a href="#" class="button button-large">Large button</a>
 
-<a href="#" class="button button--medium">Medium button</a> 
+<a href="#" class="button button-medium">Medium button</a>
 
-<a href="#" class="button button--small">Small button</a> 
+<a href="#" class="button button-small">Small button</a>
 
-<a href="#" class="button button--xsmall">Extra small button</a> 
+<a href="#" class="button button-xsmall">Extra small button</a>
 
-<a href="#" class="button button--close">Close button</a> 
+<a href="#" class="button button-close">Close button</a>
 
-<a href="#" class="button button--pill">Pill button</a> 
+<a href="#" class="button button-pill">Pill button</a>
 
-<a href="#" class="button button--xsmall">Extra small button</a> 
+<a href="#" class="button button-xsmall">Extra small button</a> 
