--- a/_buttons/main-buttons.html
+++ b/_buttons/main-buttons.html
@@ -5,14 +5,14 @@ sub-title: Primary, Secondary and Tertiary buttons with normal, hover and disabl
 usage:
 ---
 
-<a href="#" class="button button--primary">Primary Button</a>
+<a href="#" class="button button-primary">Primary Button</a>
 <br />
-<a href="#" class="button button--primary disabled">Primary Button Disabled</a>
+<a href="#" class="button button-primary disabled">Primary Button Disabled</a>
 <br />
-<a href="#" class="button button--secondary">Secondary Button</a>
+<a href="#" class="button button-secondary">Secondary Button</a>
 <br />
-<a href="#" class="button button--secondary disabled">Secondary Button Disabled</a>
+<a href="#" class="button button-secondary disabled">Secondary Button Disabled</a>
 <br />
-<a href="#" class="button button--tertiary">Tertiary Button</a>
+<a href="#" class="button button-tertiary">Tertiary Button</a>
 <br />
-<a href="#" class="button button--tertiary disabled">Tertiary Button Disabled</a>
+<a href="#" class="button button-tertiary disabled">Tertiary Button Disabled</a>
