--- a/_page-patterns/form-example.html
+++ b/_page-patterns/form-example.html
@@ -29,7 +29,7 @@ usage: A form example used for accessibility, cross-browser and rwd testing
             <p>Use DD/MM/YYYY format.</p>
             <div class="date-entry__input-group input-group input-wrapper registration-date">
                 <input aria-required="true" required="" type="text" id="registration-date" placeholder="e.g. 01/02/2017" class="grey form-control input__datepicker">
-                <button id="date-start-trigger" type="button" class="date-entry__trigger button button--primary js-show-calendar">Choose date</button>
+                <button id="date-start-trigger" type="button" class="date-entry__trigger button button-primary js-show-calendar">Choose date</button>
                 <ul class="current-errors"></ul>
             </div>
 <!--
@@ -477,7 +477,7 @@ usage: A form example used for accessibility, cross-browser and rwd testing
                     <input maxlength="2" type="text" pattern="[0-9]*" id="registration-date-month" title="Month" placeholder="MM" class="grey form-control input__datepicker--month">
                     <span class="time-slash">/</span>
                     <input maxlength="4" type="text" pattern="[0-9]*" id="registration-date-year" title="Year" placeholder="YYYY" class="grey form-control input__datepicker--year">
-                    <button id="confirm-date-start-trigger" type="button" class="date-entry__trigger button button--primary js-show-calendar">Choose date</button>
+                    <button id="confirm-date-start-trigger" type="button" class="date-entry__trigger button button-primary js-show-calendar">Choose date</button>
                     <ul class="current-errors"></ul>
                 </div>
 <!--
@@ -607,7 +607,7 @@ usage: A form example used for accessibility, cross-browser and rwd testing
 
 
         <div class="form-group">
-            <input type="submit" data-gtm="form-submit" id="form-submit" class="button button--primary" value="Submit">
+            <input type="submit" data-gtm="form-submit" id="form-submit" class="button button-primary" value="Submit">
         </div>
     </form>
 
