--- a/_page-patterns/form-example.html
+++ b/_page-patterns/form-example.html
@@ -23,6 +23,7 @@ usage: A form example used for accessibility, cross-browser and rwd testing
         <div class="form-group relative date-entry">
             <a id="registration-date-link"></a>
             <label for="registration-date" class="filters_">Date of session</label>
+            <p>test merge</p>
             <p>Use DD/MM/YYYY format.</p>
             <div class="date-entry__input-group input-group input-wrapper registration-date">
                 <input aria-required="true" required="" type="text" id="registration-date" placeholder="e.g. 01/02/2017" class="grey form-control input__datepicker">
