--- a/se-components.html
+++ b/se-components.html
@@ -5,5 +5,8 @@ title: Components
 {% for cookie in site.se-components %}
 	<div class="cookie">
 		<h2><a href="{{ cookie.url }}">{{ cookie.title }}</a></h2>
+
+
+		<p>HELLO K</p>
 	</div>
 {% endfor %}
