--- a/_page-patterns/form-example.html
+++ b/_page-patterns/form-example.html
@@ -17,7 +17,7 @@ usage: A form example used for accessibility, cross-browser and rwd testing
         </div>
     </div>
 
-   <h1>SourceTree jekyll serve test</h1>
+   <h1>SourceTree jekyll serve test 3</h1>
    
     <form class="in-article-form main-content body-content" id="registration-form" novalidate="">
 
