--- a/_typography/h1-h6.html
+++ b/_typography/h1-h6.html
@@ -6,14 +6,29 @@ sub-title: H1 to H6 styles showing font height and line-height.
 usage: H1 to H6 styles
 --- 
 
-<h1>h1 Bold heading 49px/56px</h1>
+<h1>
+    h1 Bold heading 49px/56px<br />
+    mobile 36px/42px
+</h1>
 
-<h2>h2 Bold heading 26px/35px</h2>
+<h2>
+    h2 Bold heading 30px/40px<br />
+    mobile 24px/30px
+</h2>
 
-<h3>h3 Bold heading 19px/28px</h3>
+<h3>
+    h3 Bold heading 19px/28px<br />
+    mobile 16px/25px
+</h3>
 
-<h4>h4 Bold heading 16px/25px</h4>
+<h4>
+    h4 Bold heading 16px/25px
+</h4>
 
-<h5>h5 Bold heading 14px/23px</h5>
+<h5>
+    h5 Bold heading 14px/23px
+</h5>
 
-<h6>h6 Bold heading 12px/20px</h6>
+<h6>
+    h6 Bold heading 12px/20px
+</h6>
