--- a/_typography/h1-h6.html
+++ b/_typography/h1-h6.html
@@ -7,28 +7,34 @@ usage: H1 to H6 styles
 --- 
 
 <h1>
-    h1 Bold heading 49px/56px<br />
+    H1 heading 49px/56px<br />
     mobile 36px/42px
 </h1>
 
 <h2>
-    h2 Bold heading 30px/40px<br />
+    H2 heading 30px/40px<br />
     mobile 24px/30px
 </h2>
 
 <h3>
-    h3 Bold heading 19px/28px<br />
+    H3 heading 19px/28px<br />
     mobile 16px/25px
 </h3>
 
 <h4>
-    h4 Bold heading 16px/25px
+    H4 heading 16px/25px
 </h4>
 
 <h5>
-    h5 Bold heading 14px/23px
+    H5 heading 14px/23px
 </h5>
 
 <h6>
-    h6 Bold heading 12px/20px
+    H6 heading 12px/20px
 </h6>
+
+<br /><br />
+
+<h2 class="emphasis">
+    H2 heading with 'Emhasis' line above
+</h2>
