--- a/_typography/info-notes.html
+++ b/_typography/info-notes.html
@@ -7,6 +7,6 @@ usage: Special sections of text for 'Information' or 'Caution'
 --- 
 
 
-<div class="info-note note">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem nisl, cursus quis risus a, vehicula tempus ligula. Donec ullamcorper justo ut quam elementum consequat et eget mauris.</div>
+<div class="info-note note">"info-note note" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem nisl, cursus quis risus a, vehicula tempus ligula. Donec ullamcorper justo ut quam elementum consequat et eget mauris.</div>
 
-<div class="info-note caution">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem nisl, cursus quis risus a, vehicula tempus ligula. Donec ullamcorper justo ut quam elementum consequat et eget mauris.</div>
+<div class="info-note caution">"info-note caution" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem nisl, cursus quis risus a, vehicula tempus ligula. Donec ullamcorper justo ut quam elementum consequat et eget mauris.</div>
