--- a/_typography/fonts.html
+++ b/_typography/fonts.html
@@ -9,19 +9,18 @@ usage: Font usage for standard text and FontAwesome for icons.
 
 <p class="leader">This is 'leader' text .. Our standard font is: 'Roboto' for all body text and we are using 'FontAwesome' for icons.</p>
 
-<p>Body font family with fall-backs..</p>
+<p>This is our standard font.
+</p>
+<p>
+    Body font family with fall-backs..
+</p>
+
 <p>
     body {
-        font-family: Roboto,"Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 16px;
-        line-height: 23px;
-        font-weight: normal;
-    }
+    <br>font-family: Roboto,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    <br>font-size: 16px;
+    <br>line-height: 23px;
+    <br>font-weight: normal;
+    <br>}
 </p>
 <br />
-<p>
-    <i class="fa fa-mobile fa-2x"></i> <- Mobile phone icon
-    <br />
-    <a href="http://fontawesome.io/icons/">The complete FontAwesome icon list is here..<i class="fa fa-external-link"></i></a>
-
-</p>
