--- a/_typography/icons.html
+++ b/_typography/icons.html
@@ -1,7 +1,7 @@
 ---
 layout: code-examples
 collection-name: Typography
-title: Body copy
+title: Icons
 sub-title: Icons can appear before or after text
 ---
 
