added page for dropdown -> removed 404 from sort site testing

--- a/_form-elements/-dropdowns.html
+++ b/_form-elements/-dropdowns.html
@@ -1,9 +1,9 @@
 ---
 layout: code-examples
 collection-name: Form Elements 
-title: Errors
-usage: Error messages etc.
+title: -Dropdowns
+usage: Dropdowns usage
 --- 
 
 
-<p>Errors</p>
+<p>Dropdowns</p>
