--- a/pages/use-of-images.html
+++ b/pages/use-of-images.html
@@ -7,7 +7,6 @@ permalink: /use-of-images/
 {% include breadcrumbs.html %}
 <h1>{{ page.title }}</h1>
 
-
 <div class="row">
   {% for cookie in site.use-of-images %}
   <div class="link-block col-md-4">
@@ -17,7 +16,4 @@ permalink: /use-of-images/
   {% endfor %}
 </div>
 
-
-
-
-<p>Explain usage of images (format, optimasation etc)</p>
+<p>Image usage across the portal</p>
