--- a/_form-elements/input-fields.html
+++ b/_form-elements/input-fields.html
@@ -8,7 +8,7 @@ usage: Group form fields together into smaller chunks, this makes the form feel 
 <form action="">
     <div class="form-group relative">
         <label for="name-1">Input (small)</label>
-        <input aria-required="true" required="" id="name-1" class="grey form-control input--small" type="text" placeholder="Enter your text here">
+        <input aria-required="true" required id="name-1" class="grey form-control input--small" type="text" placeholder="Enter your text here">
         <ul class="current-errors"></ul>
     </div>
 </form>
@@ -16,7 +16,7 @@ usage: Group form fields together into smaller chunks, this makes the form feel 
 <form action="">
     <div class="form-group relative">
         <label for="name-2">Input (medium)</label>
-        <input aria-required="true" required="" id="name-2" class="grey form-control input--medium" type="text" placeholder="Enter your text here">
+        <input aria-required="true" required id="name-2" class="grey form-control input--medium" type="text" placeholder="Enter your text here">
         <ul class="current-errors"></ul>
     </div>
 </form>
@@ -24,7 +24,7 @@ usage: Group form fields together into smaller chunks, this makes the form feel 
 <form action="">
     <div class="form-group relative">
         <label for="name-3">Input (large)</label>
-        <input aria-required="true" required="" id="name-3" class="grey form-control input--large" type="text" placeholder="Enter your text here">
+        <input aria-required="true" required id="name-3" class="grey form-control input--large" type="text" placeholder="Enter your text here">
         <ul class="current-errors"></ul>
     </div>    
 </form>
@@ -34,7 +34,7 @@ usage: Group form fields together into smaller chunks, this makes the form feel 
         <label for="currency">Currency input</label>
         <div class="input-group">
           <span class="input-group-addon" id="basic-addon1">£</span>
-          <input aria-required="true" required="" id="currency" class="grey form-control input--small currency" type="number">
+          <input aria-required="true" required id="currency" class="grey form-control input--small currency" type="number">
         </div>
         <ul class="current-errors"></ul>
     </div>
