--- a/_typography/icons.html
+++ b/_typography/icons.html
@@ -9,7 +9,8 @@ sub-title: Icons can appear before or after text
 <p class="leader">We are using 'FontAwesome' for icons.</p>
 
 <p>
-    <i class="fa fa-mobile fa-2x"></i> <- Mobile phone icon
+    <i class="fa fa-mobile fa-2x"></i> &#60- Mobile phone icon
+    <br />
     <br />
     <a href="http://fontawesome.io/icons/">The complete FontAwesome icon list is here..<i class="fa fa-external-link"></i></a>
 
