--- a/_colour-palettes/colours.html
+++ b/_colour-palettes/colours.html
@@ -2,7 +2,7 @@
 layout: no-code
 collection-name: Colour Palettes
 title: SE colour palette
-usage: The Scottish Enterprise online brand palette must be used at all times. When creating a website or application clours must be specified in hexadecimal formet. 
+usage: The Scottish Enterprise online brand palette must be used at all times. When creating a website or application colours must be specified in hexadecimal formet. 
 ---
 <div class="clearfix">
   <div class="color-block">
