--- a/_typography/info-notes.html
+++ b/_typography/info-notes.html
@@ -7,6 +7,6 @@ usage: Special sections of text for 'Information' or 'Caution'
 --- 
 
 
-<div class="info-note note">"info-note note" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem nisl, cursus quis risus a, vehicula tempus ligula. Donec ullamcorper justo ut quam elementum consequat et eget mauris.</div>
+<div class="info-note note">"info-note note" Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</div>
 
-<div class="info-note caution">"info-note caution" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem nisl, cursus quis risus a, vehicula tempus ligula. Donec ullamcorper justo ut quam elementum consequat et eget mauris.</div>
+<div class="info-note caution">"info-note caution" Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</div>
