added progress indicator <progress> tag with styling

--- a/_components/progress-indicator.html
+++ b/_components/progress-indicator.html
@@ -10,3 +10,6 @@ usage: The progress indicator is built with two (bootstrap) HTML elements, some 
     <span class="sr-only">70% Complete</span>
   </div>
 </div>
+
+
+<progress id="name" value="22" max="100"></progress>
