--- a/_buttons/links.html
+++ b/_buttons/links.html
@@ -5,7 +5,7 @@ sub-title: Links e.g. Text links and External links.
 usage: Note - for an external link, please add &lt;i class="fa fa-external-link"&gt;&lt;/i&gt; at the end of your link - within the &lt;a&gt;&lt;/a&gt; tags.
 ---
 
-<article>
+<div>
 
     <p>
         This is text and .. <a href="#" class="">This is a link</a>
@@ -16,4 +16,4 @@ usage: Note - for an external link, please add &lt;i class="fa fa-external-link"
         This is text and .. <a href="https://" class="">This is an external link <i class="fa fa-external-link"></i></a>
     </p>
 
-</article>
+</div>
