--- a/_content-nav/links.html
+++ b/_content-nav/links.html
@@ -2,9 +2,22 @@
 layout: code-examples
 collection-name: Content-nav
 title: Links
-sub-title: Links
-usage: Links
---- 
+sub-title: Links e.g. Text links and External links.
+usage: Note - for an external link, please add &lt;i class="fa fa-external-link"&gt;&lt;/i&gt; at the end of your link - within the &lt;a&gt;&lt;/a&gt; tags.
+---
 
+<div>
 
-<p>Links</p>
+    <p>
+        This is text and .. <a href="#" class="">This is a link</a>
+    </p>
+
+    <br/><br/>
+    <p>
+        This is text and .. <a href="https://" class="">This is an external link <i class="fa fa-external-link"></i></a>
+    </p>
+    <p>
+        This is text and .. <a href="#" class="external-link">This is an external link</a>
+    </p>
+
+</div>
